# weld

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  FUNDING.yml  LICENSE  README.md  db.json  weld.json
src/: configuration.rs  database.rs  main.rs  rest_service.rs  server.rs  weld.rs
src/codec/: line_codec.rs  mod.rs
src/database/: delete.rs  errors.rs  insert.rs  mod.rs  operations.rs  read.rs  update.rs
src/database/query_api/: fields.rs  filter.rs  mod.rs  paginate.rs  q.rs  sort.rs
src/http/: date.rs  mod.rs  request.rs  response.rs
src/proto/: line_proto.rs  mod.rs
src/service/: db_service.rs  echo_rev_service.rs  echo_service.rs  mod.rs  query.rs  rest_service.rs  utils.rs
src/service/query_api/: mod.rs  page.rs  query.rs  sort.rs
tests/: main.rs
