[package]
name = "weld"
version = "0.0.1-alpha.2"
license = "MIT/Apache-2.0"
authors = ["serayuzgur <serayuzgur@gmail.com>"]
description   = "Full fake REST API generator."
homepage      = "https://github.com/serayuzgur/weld"
repository    = "https://github.com/serayuzgur/weld"
readme        = "README.md"
keywords      = [ "json", "mock", "server","fake","api" ]
exclude       = [
  ".gitignore",
  "tests/**/*",
  ".travis.yml",
  "db.json"
]

[dependencies]
# Serde for JSON
serde="1.0.11"
serde_derive="1.0.11"
serde_json="1.0.2"

bytes = "0.4.4"
futures = "0.1.14"
hyper = "0.11.2"
futures-cpupool = "0.1.5"
rand = "0.3.16"

# Logger
slog= "2.0.6"
slog-term= "2.1.0"
slog-async= "2.1.0"

time="0.1.38"
lazy_static="0.2.8"